--- a/andreas08aMC.css
+++ b/andreas08aMC.css
@@ -9,7 +9,7 @@ font:76% Verdana,Tahoma,Arial,sans-serif;
 line-height:1.4em;
 text-align:center;
 color:#303030;
-background:#0B1E73;
+background:#e8eaec;
 }
 
 a{
